# openpaw-v2

./: README.md
.github/workflows/: firmware-release.yml
App/: .gitignore  README.md  pubspec.yaml
App/android/: build.gradle.kts
App/ios/: Podfile
App/lib/: main.dart  robot_control_page.dart  sign_in_page.dart  wifi_guide_page.dart
App/test/: widget_test.dart
App/webrtc/: SIGNALING.md  database.rules.json
Docs/Ballbot/: README.md
Docs/ML Knowledge/: README (openpaw-ml).md  canine-health-indicators.md  signal-to-sensor-map.md
Docs/Project Docs/: README.md  architecture.md  channels-and-branding.md  hardware-revisions.md  intern-guide.md  protocol.md  roadmap.md  social-handles-setup.md  vision.md
Firmware/: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
Firmware/components/ESP32_VL53L0X/: CMakeLists.txt
Firmware/components/ESP32_VL53L0X/api/platform/inc/: vl53l0x_platform.h
Firmware/components/ESP32_VL53L0X/api/platform/src/: vl53l0x_platform.c
Firmware/components/ESP32_VL53L0X/inc/: VL53L0X.h
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
Marketing/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
Marketing/config/: prompt.md  repos.allowlist  settings.yml  templates.yml
Marketing/docs/: broadcast-runbook.md  getting-api-keys.md
Marketing/queue/: .gitkeep
Marketing/scripts/: announce.sh  setup-channels.sh
Marketing/src/openpaw_marketing/: __init__.py  __main__.py  announce.py  config.py  draft.py  gitctx.py  notify.py  platforms.py  post_x.py  queue.py
(+98 files in other folders)
