[project]
name = "openpaw-marketing"
version = "0.1.0"
description = "Build-in-public automation for OpenPaw: git push -> multi-channel devlog."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aeropriest" }]
dependencies = [
  "requests>=2.31",
  "PyYAML>=6.0",
  "google-generativeai>=0.7",
  "tweepy>=4.14",
]

[project.scripts]
openpaw-marketing = "openpaw_marketing.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
